# YARP

./: .gitignore  .prettierignore  README.md  package.json
SQL/: table.sql  trigger.sql
back_end/: .env.example  .gitignore  Cargo.toml  README.md
back_end/src/: lib.rs  main.rs
back_end/src/internal/: mod.rs
back_end/src/internal/postgre/: clean.rs
back_end/src/internal/sqlite/: clean.rs  init.rs  mod.rs  open.rs  valid.rs
back_end/src/internal/utils/: check_pass.rs  mod.rs
back_end/src/web_api/: mod.rs
back_end/src/web_api/postgre/: delete.rs  get.rs  mod.rs  update.rs
back_end/src/web_api/sqlite/_data/: delete.rs  get.rs  mod.rs  update.rs
back_end/src/web_api/sqlite/users/: create.rs  key.rs  login.rs  mod.rs  update.rs
front_end/: README.md  bun.lockb  package-lock.json  package.json  remix-0.cpuprofile  vite.config.ts.timestamp-1726295786282-9ea775ab80c3f.mjs
front_end/app/components/: Items.tsx  Stats.tsx
front_end/app/components/Sections/: Account.tsx
front_end/app/components/Sections/Base/: Props.tsx
front_end/app/components/ui/: checkbox.tsx  select.tsx
front_end/app/data/: loader.tsx
front_end/app/routes/: $.tsx  _index.tsx  dashboard.ad.tsx  dashboard.tsx  login.tsx  signup.tsx
front_end/app/utils/: Cookies.ts  Format.ts
scripts/: anime_defender.lua
