[package]
name = "back_end"
version = "0.1.0"
authors = ["Lilith Iris <itslirissama@gmail.com>"]
description = "Backend for the panel"
license = "GPL-3.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
actix-web = "4"
actix-cors = "0.7"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.15.1"
serde_json = "1"
lazy_static = "1.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "time", "runtime-tokio"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
